[tool.poetry]
name = "python-course"
version = "0.1.0"
description = ""
authors = ["Beginner <wook2124@naver.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
beautifulsoup4 = "^4.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
